feat(conflict): implement domain models, use cases, and application service for conflict resolution